syntax = "proto3";

option java_multiple_files = true;
option java_package = "geststubs";

package gestservice;

service GestService {
     rpc agruparVendas(Categoria) returns (Informacoes);
     rpc obterFicheiro(Informacoes) returns (stream Ficheiro);
}

message Categoria{
  string tipo = 1;
}

message Informacoes{
  string hash = 1;
}

message Ficheiro{
  string hash = 1;
  string nomeFicheiro = 2;
  bytes blocos = 3;
}
